# ansible-role-tripleo-manila

./: .gitreview  README.md  ansible.cfg  setup.cfg
meta/: main.yml
